White Banner Complete

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           </ul>
         </nav>
       </div>
+      <div class="white_banner">
+          <p>DON'T JUST LOOK, SEE.</p>
+      </div>
     </div>
   </body>
 </html>
