--- a/index.html
+++ b/index.html
@@ -27,5 +27,58 @@
           <p>DON'T JUST LOOK, SEE.</p>
       </div>
     </div>
+    <!--Icons Secton-->
+    <div class="icons">
+      <div class="icon_box">
+        <div class="icon_box paper">
+          <img src="./resources/images/paper-icon.png" alt="Paper">
+        </div>
+        <div class="icon_box text">
+          <p>Comprehensive</p>
+          <p>Exams</p>
+        </div>
+      </div>
+      <div class="icon_box">
+        <div class="icon_box ruler">
+          <img src="./resources/images/Ruler-icon.png" alt="Ruler">
+        </div>
+        <div class="icon_box text">
+          <p>Custom</p>
+          <p>Fitting</p>
+        </div>
+      </div>
+      <div class="icon_box">
+        <div class="icon_box ruler">
+          <img src="./resources/images/truck-icon.png" alt="Truck">
+        </div>
+        <div class="icon_box text">
+          <p>Fast</p>
+          <p>Delivery</p>
+        </div>
+      </div>
+    </div>
+    <!--Blue Stripes-->
+    <div class="blue_boxes">
+      <div class="box">
+        <div class="box blue_stripe">
+          <p>PHILOSOPHY</p>
+        </div>
+        <div class="box text">
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box blue_stripe">
+          <p>APPOINTMENTS</p>
+        </div>
+        <div class="box text">
+          <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </div>
+    </div>
+    <div class="container azure_strip">
+      <img src="./resources/images/logo-black.png" alt="Logo">
+      <p>Copyright Tortoiseshell Optics</p>
+    </div>
   </body>
 </html>
