--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
           <p>Tortoiseshell Optics</p>
         </div>
         <nav>
-          <ul>
+          <ul class='menu'>
             <li>Services</li>
             <li>Products</li>
             <li>Contact</li>
+          </ul>
+          <ul class="mob_ul">
+            <li>Menu</li>
           </ul>
         </nav>
       </div>
